Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-67280

Android QML MediaPlayer Loader memory leak

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 5.12.3
    • 5.9.3, 5.10.1, 5.11.0 Beta 2, 5.11.1
    • Multimedia
    • None
    • I compile on OSX and Linux for Android, with different sdk version. I tested on Android 4.4.2, 6 and 7.

    Description

      When using the app unload the component (within a MediaPlayer) from the loader i see a memory leak of 10 MB, so after about 20 load/unload the app crashes due lower memory. I created a test for this.

      In the test there are the common play,stop, pause button and load (to load the component), unload and replace (to change the video, the test uses two videos). Who will test must add two videos in the android_files/assetsĀ  directory(i can't add because the max size that i can upload is 10 MB).

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            valentyn.doroshchuk Valentyn Doroshchuk
            niqt Nicola De Filippo
            Votes:
            6 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes