Android: Fix memory leak of GL resources

DeferredDelete events have implicitly higher priority,
which makes this event to be handled before MetaCall events.

See QSGSoftwareRenderThread::sync():
...
QCoreApplication::sendPostedEvents(nullptr, QEvent::DeferredDelete);

Where it processes deferred deletes and no meta calls will be delivered
even if they were requested before the deferred delete.

Task-number: QTBUG-67280
Change-Id: Iba23550d2cffb1cea1b4c2fe4c903078d9f2f046
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>