src/plugins/android/src/common/qandroidvideooutput.h
@@ -81,11 +81,13 @@ public:
     void deleteTexture(quint32 id) { QMetaObject::invokeMethod(this, "deleteTextureHelper", Qt::AutoConnection, Q_ARG(quint32, id)); }
     void deleteFbo(QOpenGLFramebufferObject *fbo) { QMetaObject::invokeMethod(this, "deleteFboHelper", Qt::AutoConnection, Q_ARG(void *, fbo)); }
     void deleteShaderProgram(QOpenGLShaderProgram *prog) { QMetaObject::invokeMethod(this, "deleteShaderProgramHelper", Qt::AutoConnection, Q_ARG(void *, prog)); }
+    void deleteThis() { QMetaObject::invokeMethod(this, "deleteThisHelper"); }
 
 private:
     Q_INVOKABLE void deleteTextureHelper(quint32 id);
     Q_INVOKABLE void deleteFboHelper(void *fbo);
     Q_INVOKABLE void deleteShaderProgramHelper(void *prog);
+    Q_INVOKABLE void deleteThisHelper();
 };
 
 class QAndroidTextureVideoOutput : public QAndroidVideoOutput
@@ -126,7 +128,7 @@ private:
     quint32 m_externalTex;
     QOpenGLFramebufferObject *m_fbo;
     QOpenGLShaderProgram *m_program;
-    QScopedPointer<OpenGLResourcesDeleter, QScopedPointerDeleteLater> m_glDeleter;
+    OpenGLResourcesDeleter *m_glDeleter;
 
     bool m_surfaceTextureCanAttachToContext;
 
